--- a/Java/.vscode/launch.json
+++ b/Java/.vscode/launch.json
@@ -6,15 +6,7 @@
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "Main",
-            "projectName": "Playing-with-Java_f42a2ca6",
-            "console": "externalTerminal"
-        },
-        {
-            "type": "java",
-            "name": "Launch Main",
-            "request": "launch",
-            "mainClass": "Main",
-            "projectName": "Playing-with-Java_9b2c1256",
+            "projectName": "Java",
             "console": "externalTerminal"
         }
     ]
